--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring_mvc_thymeleaf?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.format_sql=true
