Aula 29 - Incluindo o Thymeleaf-layout - dependencia e alteracao do application.properties

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- Dependência para o layout thymeleaf - uso de templates-->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
 
 	</dependencies>
 
