--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+#MySql
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring_mvc_thymeleaf?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=
 
+#Hibernate/Jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Thymeleaf - Aula 29 - Abordado o tema de como sobrescrever configurações padrões do thymeleaf/spring boot
+#a propriedade spring.thymeleaf.cache é interessante usar TRUE para quando estiver em produção
+#e FALSE para quando tiver em desenvolvimento.
+spring.thymeleaf.cache=false
