Aula 37 - Listando departamentos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #MySql
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring_mvc_thymeleaf?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=
@@ -9,7 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#Thymeleaf - Aula 29 - Abordado o tema de como sobrescrever configurações padrões do thymeleaf/spring boot
-#a propriedade spring.thymeleaf.cache é interessante usar TRUE para quando estiver em produção
+#Thymeleaf - Aula 29 - Abordado o tema de como sobrescrever configuraï¿½ï¿½es padrï¿½es do thymeleaf/spring boot
+#a propriedade spring.thymeleaf.cache ï¿½ interessante usar TRUE para quando estiver em produï¿½ï¿½o
 #e FALSE para quando tiver em desenvolvimento.
 spring.thymeleaf.cache=false
