Aula 57 - Validando formulario de cargo e departamento

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,13 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
-
+		
+		<!-- aula 57 - dependencia de validação
+		 para spring acima com versões de 2.3.0 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
