Aula 60 - Validacao de data com Spring Validator (Importante para Regras de Negocio)

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,5 @@
-#aula 58 - arquivo para centralizar todas mensagens de validação
+#aula 58 - arquivo ValidationMessages.properties é um arquivo próprio da especificação do Bean Validation
+#arquivo para centralizar todas mensagens de validação
 #trabalha vinculado as anotações no nas classes de dominio
 javax.validation.constraints.Size.message= Deve estar entre {min} e {max} caracteres.
 javax.validation.constraints.NotBlank.message= \u00C9 obrigat\u00F3rio.
