--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,7 @@
 #MySql
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+#					  mysql://[username] : [password] @ [host] / [database]
+spring.datasource.url=mysql://b6157fc4e6c3dd:ad4a7a08@us-cdbr-east-03.cleardb.com/heroku_a0e71d9a4fa8a96?reconnect=true
 
 #Hibernate/Jpa
 spring.jpa.hibernate.ddl-auto=update
