DEPLOY - ajustes finais, removendo chaves secretas para implantacao em novo repositorio heroku

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,13 @@
 #MySql
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #					  mysql://[username] : [password] @ [host] / [database]
-spring.datasource.url=mysql://b6157fc4e6c3dd:ad4a7a08@us-cdbr-east-03.cleardb.com/heroku_a0e71d9a4fa8a96?reconnect=true
+spring.datasource.url=
+#
+#				NÃO DISPONIBILIZAR URL DO BANCO NO COMMIT
+#
+#
+#
+###############################################################################
 
 #Hibernate/Jpa
 spring.jpa.hibernate.ddl-auto=update
