--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,8 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.thymeleaf.cache=false
 
 #chaves personalizadas
-jwt.secret={tokenSequenceCaracter}
-jwt.expiration=60000
+#
+#
+#em producao, utilizar VARIAVEL DE AMBIENTE DA IDE {tokenSequenceCaracter}
+jwt.secret=
+jwt.expiration=600000
